--- a/src/main/webapp/WEB-INF/jsp/base.jspf
+++ b/src/main/webapp/WEB-INF/jsp/base.jspf
@@ -15,6 +15,8 @@
 
     <!-- Custom CSS -->
     <link href="resources/css/stylish-portfolio.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="resources/css/sb-admin-2.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="resources/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -25,6 +27,8 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <script src="resources/js/sb-admin-2.js"></script>
+
     <![endif]-->
 
 </head>
