--- a/src/main/webapp/WEB-INF/jsp/base.jspf
+++ b/src/main/webapp/WEB-INF/jsp/base.jspf
@@ -15,27 +15,32 @@
     <!-- Bootstrap Core CSS -->
     <link href="resources/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link href="resources/css/stylish-portfolio.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link href="resources/css/sb-admin-2.css" rel="stylesheet">
+    <!-- MetisMenu CSS -->
+    <link href="resources/bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
+    <!-- Timeline CSS -->
+    <link href="resources/css/timeline.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="resources/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
+    <!-- /#wrapper -->
     <script src="resources/js/jquery.js"></script>
+    <script src="resources/js/bootstrap.min.js"></script>
     <script src="resources/js/sb-admin-2.js"></script>
-    <!-- Metis Menu Plugin JavaScript -->
-    <script src="resources/js/metisMenu.min.js"></script>
+    <!-- Bower components -->
+    <script src="resources/bower_components/metisMenu/dist/metisMenu.min.js"></script>
     <script src="resources/js/jquery.dataTables.min.js"></script>
-
-    <!--[if lt IE 9]>
+    <script src="resources/bower_components/raphael/raphael-min.js"></script>
+    <script src="resources/bower_components/morrisjs/morris.min.js"></script>
+    <script src="resources/js/morris-data.js"></script>
+       <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-
-</head>
